--- a/chat2.html
+++ b/chat2.html
@@ -29,7 +29,7 @@
         <a href="chats.html"><i class="fas fa-angle-left fa-3x"></i></a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">Chow Mo-wan</h1>
+        <h1 class="alt-header__title">Boss</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -41,23 +41,14 @@
       <div class="chat__timestamp">Tuesday, July 15, 2021</div>
 
       <div class="message-row">
-        <img src="img/man.PNG" />
+        <img src="img/boss.PNG" />
         <div class="message-row__content">
-          <span class="message-row__author">Chow Mo-wan</span>
+          <span class="message-row__author">Boss</span>
           <div class="message-row__info">
-            <span class="message-row__bubble">Why didn't you come?</span>
-            <span class="message-row__time">20:00</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="message-row">
-        <img src="img/man.PNG" />
-        <div class="message-row__content">
-          <span class="message-row__author">Chow Mo-wan</span>
-          <div class="message-row__info">
-            <span class="message-row__bubble">I've been waiting all day.</span>
-            <span class="message-row__time">20:02</span>
+            <span class="message-row__bubble"
+              >Did you buy what I told you?</span
+            >
+            <span class="message-row__time">15:25</span>
           </div>
         </div>
       </div>
@@ -65,18 +56,30 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message-row__info">
-            <span class="message-row__bubble">I'm a little tired.</span>
-            <span class="message-row__time">20:10</span>
+            <span class="message-row__bubble">Yes. I did.</span>
+            <span class="message-row__time">15:26</span>
           </div>
         </div>
       </div>
+
       <div class="message-row">
-        <img src="img/man.PNG" />
+        <img src="img/boss.PNG" />
         <div class="message-row__content">
-          <span class="message-row__author">Chow Mo-wan</span>
+          <span class="message-row__author">Boss</span>
           <div class="message-row__info">
-            <span class="message-row__bubble">I'll call you tonight.</span>
-            <span class="message-row__time">20:11</span>
+            <span class="message-row__bubble"
+              >You can leave work when you're done.</span
+            >
+            <span class="message-row__time">16:00</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message-row__info">
+            <span class="message-row__bubble">Thanks :)</span>
+            <span class="message-row__time">16:01</span>
           </div>
         </div>
       </div>
