--- a/chats.html
+++ b/chats.html
@@ -40,41 +40,62 @@
           <div class="user-component__column between-space">
             <img
               class="user-component__avatar user-component__avatar"
-              src="screenshot/joohoney.jpg"
+              src="img/man.PNG"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">Jiwoo</h4>
-              <h6 class="user-component__subtitle">
-                Please check My Kokoa Account Info
-              </h6>
+              <h4 class="user-component__title">Chow Mo-wan</h4>
+              <h6 class="user-component__subtitle">I'll call you tonight.</h6>
             </div>
           </div>
           <div class="user-component__column between-space">
-            <span class="user-component__time">21:22</span>
-            <div class="badge">1</div>
-          </div>
-        </div>
-
-        <div class="user-component">
-          <div class="user-component__column">
-            <img
-              class="user-component__avatar user-component__avatar"
-              src="screenshot/joohoney.jpg"
-            />
-            <div class="user-component__text">
-              <h4 class="user-component__title">Jiwoo</h4>
-              <h6 class="user-component__subtitle">
-                Please check My Kokoa Account Info
-              </h6>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
+            <span class="user-component__time">20:22</span>
             <div class="badge">1</div>
           </div>
         </div>
       </a>
+
+      <a href="chat2.html">
+      <div class="user-component">
+        <div class="user-component__column between-space">
+          <img
+            class="user-component__avatar user-component__avatar"
+            src="img/boss.PNG"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Boss</h4>
+            <h6 class="user-component__subtitle">
+              Thanks :)
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column between-space">
+          <span class="user-component__time user-component__time--done">16:05</span>
+          <!-- <div class="badge">1</div> -->
+        </div>
+      </div>
+    </a>
+
+      <a href="chat3.html">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            class="user-component__avatar user-component__avatar"
+            src="img/master.PNG"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Mrs.Son</h4>
+            <h6 class="user-component__subtitle">
+              It doesn't look good.
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">10:30</span>
+          <div class="badge">3</div>
+        </div>
+      </div>
     </main>
+  </a>
 
     <nav class="nav">
       <ul class="nav__list">
@@ -104,7 +125,8 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ </span>
+      <span>Your screen is too big! </span>
+      <span>Please reduce the screen size.</span>
     </div>
 
     <div id="no-landscape">please turn your phone!</div>
