--- a/index.html
+++ b/index.html
@@ -25,21 +25,22 @@
     </div>
 
     <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <h1 class="welcome-header__title">Welcome to 花樣年華</h1>
       <p class="welcome-header__text">
         If you haver a Kokao Account, log in with your email or phone number.
       </p>
     </header>
 
     <form action="friends.html" method="GET" id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="password" />
+      <input type="text" placeholder="Email or phone number" required />
+      <input type="password" placeholder="password" required />
       <input type="submit" value="Log In" />
-      <a href="#">Find Kakao Account or Password</a>
+      <a href="#">Find Your Account or Password</a>
     </form>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ </span>
+      <span>Your screen is too big! </span>
+      <span>Please reduce the screen size.</span>
     </div>
 
     <div id="no-landscape">please turn your phone!</div>
