--- a/find.html
+++ b/find.html
@@ -1,137 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <link rel="stylesheet" href="css/styles.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="css/styles.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find - Kokoa Clone</title>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="status-bar">
-        <div class="status-bar__column">
-            <span>No Service</span>
-            <i class="fas fa-wifi"></i>
-
-        </div>
-        <div class="status-bar__column">
-            <span>18:43</span>
-        </div>
-        <div class="status-bar__column">
-            <span>110%</span>
-            <i class="fas fa-battery-full fa-lg"></i>
-            <i class="fas fa-bolt"></i>
-
-        </div>
+      <div class="status-bar__column">
+        <span>No Service</span>
+        <i class="fas fa-wifi"></i>
+      </div>
+      <div class="status-bar__column">
+        <span>18:43</span>
+      </div>
+      <div class="status-bar__column">
+        <span>110%</span>
+        <i class="fas fa-battery-full fa-lg"></i>
+        <i class="fas fa-bolt"></i>
+      </div>
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Find</h1>
-        <div class="screen-header__icons dot-relative">
-            <span><i class="fas fa-search fa-lg"></i></span>
-            <span><i class="fas fa-cog fa-lg"></i></span>
-            <div class="dot"></div>
-        </div>
-
+      <h1 class="screen-header__title">Find</h1>
+      <div class="screen-header__icons dot-relative">
+        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-cog fa-lg"></i></span>
+        <div class="dot"></div>
+      </div>
     </header>
 
     <main class="main-screen">
-        <div class="icon-row">
-            <div class="icon-row__icon">
-                <i class="fas fa-qrcode"></i>
-                <span>QR Code</span>
+      <div class="icon-row">
+        <div class="icon-row__icon">
+          <i class="fas fa-qrcode"></i>
+          <span>QR Code</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="far fa-address-book"></i>
+          <span>Add by Contacts</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="fas fa-fingerprint"></i>
+          <span>Add by ID</span>
+        </div>
+        <div class="icon-row__icon">
+          <i class="far fa-envelope"></i>
+          <span>Invite</span>
+        </div>
+      </div>
+
+      <div class="recommended-friends">
+        <h6 class="recommended-friends__title">Recommended Friends</h6>
+
+        <div class="user-component between-space">
+          <div class="user-component__column">
+            <img
+              class="user-component__avatar user-component__avatar--sm"
+              src="img/night.PNG"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Chow's wife
+              </h4>
             </div>
-            <div class="icon-row__icon">
-                <i class="far fa-address-book"></i>
-                <span>Add by Contacts</span>
-            </div>
-            <div class="icon-row__icon">
-                <i class="fas fa-fingerprint"></i>
-                <span>Add by ID</span>
-            </div>
-            <div class="icon-row__icon">
-                <i class="far fa-envelope"></i>
-                <span>Invite</span>
-            </div>
+          </div>
+          <div class="user-component__column">
+            <div></div>
+          </div>
         </div>
 
-        <div class="recommended-friends">
-            <h6 class="recommended-friends__title">Recommended Friends</h6>
-            <span>You have no recommended friedns.</span>
-        </div>
-
-        <div class="open-chat">
-            <div class="open-chat__header">
-                <h4>Open Chat</h4>
-                <span>Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i></span>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              class="user-component__avatar user-component__avatar--sm"
+              src="img/noddle.PNG"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Noddle Heaven
+              </h4>
             </div>
+          </div>
+          <div class="user-component__column">
+            <div></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="open-chat">
+        <div class="open-chat__header">
+          <h4>Open Chat</h4>
+          <span
+            >Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i
+          ></span>
+        </div>
+      </div>
+
+      <div class="open-post">
+        <div class="open-post__column">
+          <h5 class="open-post__title">#DrunkPam</h5>
+          <h6 class="open-post__hashtags">#night#crazy#friends</h6>
+          <div class="open-post__members">
+            <img src="img/emo-drunk.PNG" />
+            <span class="open-post__member-count">252 members</span>
+            <div class="divider"></div>
+            <span class="open-post__member-status">Active</span>
+          </div>
         </div>
 
-        <div class="open-post">
-
-            <div class="open-post__column">
-                <h5 class="open-post__title">#BTS</h5>
-                <h6 class="open-post__hashtags">#bts#army#friends</h6>
-                <div class="open-post__members">
-                    <img src="screenshot/joohoney.jpg" />
-                    <span class="open-post__member-count">802 members</span>
-                    <div class="divider"></div>
-                    <span class="open-post__member-status">Active</span>
-                </div>
+        <div class="open-post__column">
+          <div class="open-post__photo">
+            <img src="img/openchat1.PNG" />
+            <div class="open-post__heart-count">
+              <i class="fas fa-heart fa-xs"></i>
+              <span>200</span>
             </div>
+          </div>
+        </div>
+      </div>
 
-            <div class="open-post__column">
-                <div class="open-post__photo">
-                    <img src="screenshot/joohoney.jpg" />
-                    <div class="open-post__heart-count">
-                        <i class="fas fa-heart fa-xs"></i>
-                        <span>326</span>
-                    </div>
-                </div>
+      <div class="open-post">
+        <div class="open-post__column">
+          <h5 class="open-post__title">#CalliforniaSandwich</h5>
+          <h6 class="open-post__hashtags">#fresh#jonmat#food</h6>
+          <div class="open-post__members">
+            <img src="img/emo-yum.PNG" />
+            <span class="open-post__member-count">105 members</span>
+            <div class="divider"></div>
+            <span class="open-post__member-status">Hot</span>
+          </div>
+        </div>
+
+        <div class="open-post__column">
+          <div class="open-post__photo">
+            <img src="img/openchat2.PNG" />
+            <div class="open-post__heart-count">
+              <i class="fas fa-heart fa-xs"></i>
+              <span>80</span>
             </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="open-post">
+        <div class="open-post__column">
+          <h5 class="open-post__title">#WelcomeToBuenosAires</h5>
+          <h6 class="open-post__hashtags">#travel#tourguide#Argentina</h6>
+          <div class="open-post__members">
+            <img src="img/emo-smile.PNG" />
+            <span class="open-post__member-count">300 members</span>
+            <div class="divider"></div>
+            <span class="open-post__member-status">BigHeart</span>
+          </div>
         </div>
 
+        <div class="open-post__column">
+          <div class="open-post__photo">
+            <img src="img/openchat3.PNG" />
+            <div class="open-post__heart-count">
+              <i class="fas fa-heart fa-xs"></i>
+              <span>255</span>
+            </div>
+          </div>
         </div>
+      </div>
     </main>
 
-
-
     <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link" href="friends.html">
-                    <i class="far fa-user fa-2x"></i></a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="chats.html">
-                    <span class="nav__notification badge">1</span>
-                    <i class="far fa-comment fa-2x"></i></a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="find.html">
-                    <i class="fas fa-search fa-2x"></i></a>
-            </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="more.html">
-                    <div class="nav__dot"></div>
-                    <i class="fas fa-ellipsis-h fa-2x"></i>
-                </a>
-            </li>
-        </ul>
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <a class="nav__link" href="friends.html">
+            <i class="far fa-user fa-2x"></i
+          ></a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="chats.html">
+            <span class="nav__notification badge">1</span>
+            <i class="far fa-comment fa-2x"></i
+          ></a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="find.html">
+            <i class="fas fa-search fa-2x"></i
+          ></a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="more.html">
+            <div class="nav__dot"></div>
+            <i class="fas fa-ellipsis-h fa-2x"></i>
+          </a>
+        </li>
+      </ul>
     </nav>
 
     <div id="no-mobile">
-        <span>Your screen is too big ㅠㅠ </span>
-      </div>
+      <span>Your screen is too big! </span>
+      <span>Please reduce the screen size.</span>
+    </div>
 
-      <div id="no-landscape">
-        please turn your phone!
-      </div>
+    <div id="no-landscape">please turn your phone!</div>
 
-    <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/6478f529f2.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
