--- a/friends.html
+++ b/friends.html
@@ -43,10 +43,10 @@
         <div class="user-component__column">
           <img
             class="user-component__avatar user-component__avatar--xl"
-            src="screenshot/joohoney.jpg"
+            src="img/woman.PNG"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Jiwoo</h4>
+            <h4 class="user-component__title">Su Li-shen</h4>
             <!-- <h6 class="user-component__subtitle">this is my life</h6> -->
           </div>
         </div>
@@ -55,26 +55,75 @@
 
       <div class="friends-screen__channel">
         <div class="friends-screen__channel-header">
-          <span>Channel</span>
+          <span>Friends</span>
           <i class="fas fa-chevron-up fa-xs"></i>
         </div>
-        <div class="user-component">
+
+        <div class="user-component between-space">
           <div class="user-component__column">
             <img
               class="user-component__avatar user-component__avatar--sm"
-              src="screenshot/joohoney.jpg"
+              src="img/boss.PNG"
             />
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">
-                Channel
+                Boss
               </h4>
             </div>
           </div>
           <div class="user-component__column">
-            <div>
-              <span>2</span>
-              <i class="fas fa-chevron-right fa-xs"></i>
+            <div></div>
+          </div>
+        </div>
+
+        <div class="user-component between-space">
+          <div class="user-component__column">
+            <img
+              class="user-component__avatar user-component__avatar--sm"
+              src="img/man.PNG"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Chow Mo-wan
+              </h4>
             </div>
+          </div>
+          <div class="user-component__column">
+            <div></div>
+          </div>
+        </div>
+
+        <div class="user-component between-space">
+          <div class="user-component__column">
+            <img
+              class="user-component__avatar user-component__avatar--sm"
+              src="img/master.PNG"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Mrs.Son
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div></div>
+          </div>
+        </div>
+
+        <div class="user-component between-space">
+          <div class="user-component__column">
+            <img
+              class="user-component__avatar user-component__avatar--sm"
+              src="img/night.PNG"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Husband
+              </h4>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div></div>
           </div>
         </div>
       </div>
@@ -108,11 +157,12 @@
     </nav>
 
     <div id="splash-screen">
-      <i class="fas fa-comment fa-2x"></i>
+      <img src="img/cover.jpg" />
     </div>
 
     <div id="no-mobile">
-      <span>Your screen is super big ㅠㅠ </span>
+      <span>Your screen is too big! </span>
+      <span>Please reduce the screen size.</span>
     </div>
 
     <div id="no-landscape">please turn your phone!</div>
