--- a/more.html
+++ b/more.html
@@ -41,10 +41,10 @@
         <div class="user-component__column">
           <img
             class="user-component__avatar user-component__avatar--xl"
-            src="screenshot/joohoney.jpg"
+            src="img/woman.PNG"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Jiwoo</h4>
+            <h4 class="user-component__title">Su Li-shen</h4>
             <h6 class="user-component__subtitle">+1 081 555 4444</h6>
           </div>
         </div>
@@ -119,7 +119,8 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ </span>
+      <span>Your screen is too big! </span>
+      <span>Please reduce the screen size.</span>
     </div>
 
     <div id="no-landscape">please turn your phone!</div>
