--- a/settings.html
+++ b/settings.html
@@ -90,7 +90,8 @@
     </nav>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ </span>
+      <span>Your screen is too big! </span>
+      <span>Please reduce the screen size.</span>
     </div>
 
     <div id="no-landscape">please turn your phone!</div>
