--- a/more.html
+++ b/more.html
@@ -73,20 +73,35 @@
       </div>
 
       <div class="more-suggestions">
+
         <h4 class="more-suggestions__title">Sugesstions</h4>
+
         <div class="more-suggestions__icons">
+
           <div class="more-suggestions__icon">
             <div class="more-suggestions__image">
               <i class="fas fa-quote-right"></i>
             </div>
             <span class="more-suggestions__icon-text">Kokao Story</span>
           </div>
+
           <div class="more-suggestions__icon">
-            <div class="more-suggestions__image">
-              <i class="fas fa-quote-right"></i>
-            </div>
-            <span class="more-suggestions__icon-text">Kokao Story</span>
+            <img src="img/wang.PNG" class="more-suggestions__image">
+            <span class="more-suggestions__icon-text">Wang's movie class</span>
           </div>
+
+          <div class="more-suggestions__icon">
+            <img src="img/jang.PNG" class="more-suggestions__image">
+            <span class="more-suggestions__icon-text">Jang's gallery</span>
+          </div>
+
+          <div class="more-suggestions__icon">
+            <img src="img/pai.PNG" class="more-suggestions__image">
+            <span class="more-suggestions__icon-text">Airline Reservation</span>
+          </div>
+
+        </div>
+
         </div>
       </div>
     </main>
