--- a/settings.html
+++ b/settings.html
@@ -45,6 +45,7 @@
           </div>
           <div class="settings__setting-column"></div>
         </li>
+
         <li class="settings__setting">
           <div class="settings__setting-column">
             <i class="fas fa-flask"></i>
@@ -52,12 +53,53 @@
           </div>
           <div class="settings__setting-column"></div>
         </li>
+
         <li class="settings__setting">
           <div class="settings__setting-column">
             <i class="fas fa-info-circle"></i>
             <span>Version</span>
           </div>
           <div class="settings__setting-column">Latest Version</div>
+        </li>
+
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-lock"></i>
+            <span>Privacy</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-bell"></i>
+            <span>Notifications</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-user"></i>
+            <span>Friends</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-comment"></i>
+            <span>Chats</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-sun"></i>
+            <span>Display</span>
+          </div>
+          <div class="settings__setting-column"></div>
         </li>
       </ul>
     </main>
