--- a/chats.html
+++ b/chats.html
@@ -55,47 +55,64 @@
       </a>
 
       <a href="chat2.html">
-      <div class="user-component">
-        <div class="user-component__column between-space">
-          <img
-            class="user-component__avatar user-component__avatar"
-            src="img/boss.PNG"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Boss</h4>
-            <h6 class="user-component__subtitle">
-              Thanks :)
-            </h6>
+        <div class="user-component">
+          <div class="user-component__column between-space">
+            <img
+              class="user-component__avatar user-component__avatar"
+              src="img/boss.PNG"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Boss</h4>
+              <h6 class="user-component__subtitle">Thanks :)</h6>
+            </div>
+          </div>
+          <div class="user-component__column between-space">
+            <span class="user-component__time user-component__time--done"
+              >16:05</span
+            >
           </div>
         </div>
-        <div class="user-component__column between-space">
-          <span class="user-component__time user-component__time--done">16:05</span>
-          <!-- <div class="badge">1</div> -->
-        </div>
-      </div>
-    </a>
+      </a>
 
       <a href="chat3.html">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            class="user-component__avatar user-component__avatar"
-            src="img/master.PNG"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Mrs.Son</h4>
-            <h6 class="user-component__subtitle">
-              It doesn't look good.
-            </h6>
+        <div class="user-component">
+          <div class="user-component__column between-space">
+            <img
+              class="user-component__avatar user-component__avatar"
+              src="img/master.PNG"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Mrs.Son</h4>
+              <h6 class="user-component__subtitle">It doesn't look good.</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">10:30</span>
+            <div class="badge">3</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">10:30</span>
-          <div class="badge">3</div>
+      </a>
+
+      <a href="chat4.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              class="user-component__avatar user-component__avatar"
+              src="img/night.PNG"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Husband</h4>
+              <h6 class="user-component__subtitle">Will you be late today?</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time user-component__time--done"
+              >01:25</span
+            >
+          </div>
         </div>
-      </div>
+      </a>
     </main>
-  </a>
 
     <nav class="nav">
       <ul class="nav__list">
