--- a/find.html
+++ b/find.html
@@ -149,7 +149,7 @@
       <div class="open-post">
         <div class="open-post__column">
           <h5 class="open-post__title">#WelcomeToBuenosAires</h5>
-          <h6 class="open-post__hashtags">#travel#tourguide#Argentina</h6>
+          <h6 class="open-post__hashtags">#travel#tourguide</h6>
           <div class="open-post__members">
             <img src="img/emo-smile.PNG" />
             <span class="open-post__member-count">300 members</span>
