--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </div>
 
     <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to 花樣年華</h1>
+      <h1 class="welcome-header__title">Welcome to</h1>
+      <h1 class="welcome-header__title-second">花樣年華</h1>
       <p class="welcome-header__text">
         If you haver a Kokao Account, log in with your email or phone number.
       </p>
