--- a/chat4.html
+++ b/chat4.html
@@ -29,7 +29,7 @@
         <a href="chats.html"><i class="fas fa-angle-left fa-3x"></i></a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">Mrs.Son</h1>
+        <h1 class="alt-header__title">Husband</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -38,15 +38,17 @@
     </header>
 
     <main class="main-screen main-chat">
-      <div class="chat__timestamp">Tuesday, July 15, 2021</div>
+      <div class="chat__timestamp">Monday, July 14, 2021</div>
 
       <div class="message-row">
-        <img src="img/master.PNG" />
+        <img src="img/night.PNG" />
         <div class="message-row__content">
-          <span class="message-row__author">Mrs.Son</span>
+          <span class="message-row__author">Husband</span>
           <div class="message-row__info">
-            <span class="message-row__bubble">When are you coming home?</span>
-            <span class="message-row__time">10:00</span>
+            <span class="message-row__bubble"
+              >I'm working. Why did you call?</span
+            >
+            <span class="message-row__time">22:00</span>
           </div>
         </div>
       </div>
@@ -54,43 +56,8 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message-row__info">
-            <span class="message-row__bubble">I'm late today. why?</span>
-            <span class="message-row__time">10:05</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="message-row">
-        <img src="img/master.PNG" />
-        <div class="message-row__content">
-          <span class="message-row__author">Mrs.Son</span>
-          <div class="message-row__info">
-            <span class="message-row__bubble">I have something for you.</span>
-            <span class="message-row__time">10:07</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="message-row">
-        <img src="img/master.PNG" />
-        <div class="message-row__content">
-          <span class="message-row__author">Mrs.Son</span>
-          <div class="message-row__info">
-            <span class="message-row__bubble"
-              >Why aren't you home so often?</span
-            >
-            <span class="message-row__time message-row__time--sametime"
-              >10:08</span
-            >
-          </div>
-        </div>
-      </div>
-
-      <div class="message-row">
-        <div class="message-row__content message-row__content--sametime">
-          <div class="message-row__info">
-            <span class="message-row__bubble">It doesn't look good.</span>
-            <span class="message-row__time">10:08</span>
+            <span class="message-row__bubble">Will you be late today?</span>
+            <span class="message-row__time">01:25</span>
           </div>
         </div>
       </div>
