--- a/friends.html
+++ b/friends.html
@@ -50,7 +50,13 @@
             <!-- <h6 class="user-component__subtitle">this is my life</h6> -->
           </div>
         </div>
-        <div class="user-component__column"></div>
+        <div class="user-component__column--profile">
+          <i class="fas fa-compact-disc"></i>
+          <div class="user-component__column--profile__music">
+            <div>Quizas, Quizas, Quizas</div>
+            <div>Nat King Cole</div>
+          </div>
+        </div>
       </div>
 
       <div class="friends-screen__channel">
@@ -71,9 +77,7 @@
               </h4>
             </div>
           </div>
-          <div class="user-component__column">
-            <div></div>
-          </div>
+          <div class="user-component__column"></div>
         </div>
 
         <div class="user-component between-space">
@@ -88,8 +92,13 @@
               </h4>
             </div>
           </div>
-          <div class="user-component__column">
-            <div></div>
+
+          <div class="user-component__column--profile">
+            <i class="fas fa-compact-disc"></i>
+            <div class="user-component__column--profile__music">
+              <div>Like Someone In Love</div>
+              <div>Chet Baker</div>
+            </div>
           </div>
         </div>
 
@@ -105,8 +114,8 @@
               </h4>
             </div>
           </div>
-          <div class="user-component__column">
-            <div></div>
+          <div class="user-component__column--profile">
+            Recruiting mahjong fams!
           </div>
         </div>
 
@@ -122,8 +131,8 @@
               </h4>
             </div>
           </div>
-          <div class="user-component__column">
-            <div></div>
+          <div class="user-component__column--profile">
+            ✈ On a business trip ...
           </div>
         </div>
       </div>
