--- a/friends.html
+++ b/friends.html
@@ -33,8 +33,9 @@
       </div>
     </header>
 
-    <a id="friends-display-link">
-      <i class="fas fa-info-circle"></i> Friends' Names Display
+    <a href="chats.html" id="friends-display-link">
+      <i class="fas fa-info-circle"></i>
+      <span>Check your message!</span>
       <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
